--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>EJEMPLO SPA</title>
   </head>
   <body>
-      <h2>SPA CODER HOUSE</h2>
+      <h2>SPA WITH JQUERY</h2>
       <hr>
       <nav>
         <a href="/"         class="button">Add Product</a> 
